Switched TransactionIdManager to construct a new Long instead of using Long.valueOf()